Add onclick event to TEST button in index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         }
       }
     </script>
-    <input type="button" value="TEST">
+    <input type="button" value="TEST" onclick="XmlHttpRequest()">
   </body>
 </html>
