Update button element to use an id attribute

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           document.getElementById("kekka").innerHTML = httpObject.responseText;
         }
       }
+      document.getElementById("button").onclick = XmlHttpRequest;
     </script>
-    <input type="button" value="TEST" onclick="XmlHttpRequest()">
+    <input id="button" type="button" value="TEST" />
   </body>
 </html>
