--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </script>
   </head>
   <body onload="init()">
-    <h1 id="kekka"></h1>
+    <span id="kekka"></span>
     <script>
       function XmlHttpRequest(){
         if(window.XMLHttpReqquest){
