--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </script>
     <script>
       function XmlHttpRequest(){
-        if(window.XMLHttpReqquest){
+        if(window.XMLHttpRequest){
           httpObject = new XMLHttpRequest();
         } else if(window.ActiveXObject){
           httpObject = new ActiveXObject('MSXML2.XMLHTTP.3.0');
