Update URL in XMLHttpRequest to relative path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           httpObject = new ActiveXObject('MSXML2.XMLHTTP.3.0');
         }
         httpObject.onreadystate = display;
-        httpObject.open("GET", "https://shozukishoshozukisho.github.io/TEST/test.txt", true);
+        httpObject.open("GET", "test.txt", true);
         httpObject.send(null);
       }
       function display() {
