Change GitHub token in index.html
Updated the GitHub token in index.html.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,7 +11,7 @@
 const OWNER = "shozukishoshozukisho";
 const REPO  = "TEST";
 const PATH  = "test.txt";
-const TOKEN = "ghp_xxxxxxxxx"; 
+const TOKEN = "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"; 
 //HTTP通信を行う関数
 function XmlHttpRequest(){
 	if(window.XMLHttpRequest){
